# Time-Series-Classification

./: .gitignore  README.md  adapting_to_classification.py  baseline.py  dataloader.py  pyproject.toml  requirements.txt  transformer_pretraining.py
notebooks/: 01_eda.ipynb  02_train_cnn.ipynb  03_pretrain_indpatchtst.ipynb  04_train_indpatchtst_classifier.ipynb  05_MOMENT_foundation_model.ipynb
src/data/: dataloader.py
src/models/: __init__.py  cnn_baseline.py  indpatchtst.py  indpatchtst_classifier.py
src/training/: adapting_to_classification.py  indpatchtst_clf_utils.py  optuna_search.py  train_indpatchtst_class.py  train_indpatchtst_reg.py  trainer_cnn.py
tests/: conftest.py  test_dataloader.py  test_imports.py
